src/assets/menu-body.css
main.menu-body > section {
  color: white;
}

main.menu-body > section {
  transition: all 1s ease-in-out;
  background-color: var(--color-yellow);
}

main.menu-body > section {
  padding: .1rem
}

main.menu-body > section:first-child {
  padding-top: 1rem;
}

main.menu-body > section:first-child > .heading-wrapper {
  display: none;
}

main.menu-body > section:last-child {
  padding-bottom: 2rem;
}

main.menu-body > section > .heading-wrapper {
  display: flex;
  flex-wrap: nowrap;
  gap: 1rem;
  align-items: center;
  justify-content: space-between;
  padding: 1rem;
  color: var(--color-black);
  font-size: large;
}
main.menu-body > section > .heading-wrapper > .select-type-wrapper {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  justify-content: flex-end;
  gap: .2rem;
}

main.menu-body > section > .heading-wrapper label {
  display: flex;
  align-items: center;
  color: var(--color-white);
  background-color: var(--color-black);
  border: .1rem solid var(--color-black);
  border-radius: .7rem;
  font-weight: bold;
  padding: .4rem 1rem;
  font-size: medium;
  font-weight: 400;
  transition: background-color .2s ease-in-out;
  font-weight: 600;
}

main.menu-body > section > .heading-wrapper input:checked + label {
  background-color: var(--color-orange);
  border: .2rem solid var(--color-white);
  color: var(--color-black);
}

main.menu-body > section > section {
  opacity: 0;
  height: 0;
  overflow: hidden;
  transition: opacity .5s ease, height .5s ease;
}

main.menu-body > section:has(#p-50cm:checked) #p-50cm,
main.menu-body > section:has(#p-30cm:checked) #p-30cm {
  opacity: 1;
  height: auto;
}

main.menu-body > section:has(#p-Mica:checked) #p-Mica,
main.menu-body > section:has(#p-Mare:checked) #p-Mare,
main.menu-body > section:has(#p-Farfurie:checked) #p-Farfurie {
  opacity: 1;
  height: auto;
}

main.menu-body >  section:has(#p-Pui:checked) #p-Pui,
main.menu-body >  section:has(#p-Porc:checked) #p-Porc,
main.menu-body >  section:has(#p-Vită:checked) #p-Vită {
  opacity: 1;
  height: auto;
}

main.menu-body .menu-item {
  background-color: var(--color-black);
  border-bottom: .1rem solid var(--color-yellow);
}

.menu-item .img-responsive {
  width: 10rem;
  height: auto;
}

main.menu-body .menu-item .arrow {
  fill: var(--color-orange);
  flex-shrink: 0;
}

main.menu-body .menu-item > summary {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem 1rem;
}

main.menu-body .menu-item > summary > .name-wrapper {
  display: flex;
  align-items: baseline;
  gap: .5rem;
}

main.menu-body .menu-item > summary::-webkit-details-marker {
  display: none;
}

main.menu-body .menu-item h4 {
  font-weight: 400 !important;
  padding-right: 1rem;
}

main.menu-body .menu-item > p  {
  padding: 1rem 2rem 1rem;
  display: block;
}

main.menu-body .menu-item .price {
  color: var(--color-orange);
  font-weight: bold;
  font-size: larger;
  padding-left: 1rem;
  text-wrap: nowrap;
}

/* Arrow transition START */
main.menu-body .menu-item > summary > .name-wrapper > svg {
  transition: transform .1s ease-in-out;
}

main.menu-body .menu-item[open] .name-wrapper > svg {
  transform: rotate(90deg);
}
/* Arrow transition FINISH */

/* Details description transition START */
main.menu-body .menu-item::details-content {
  block-size: 0;
  transition-property: block-size, content-visibility;
	transition-duration: .3s;
	transition-behavior: allow-discrete;
  transition-timing-function: ease-in-out;
  color: transparent;
  background-color: var(--color-grey);
}

main.menu-body .menu-item[open]::details-content {
	block-size: auto;
	block-size: calc-size(auto, size);
  color: var(--color-white);
}
/* Details description transition FINISH  */

